@@ -1,3 +1,3 @@
 PROJNAME=dzco
-VERSION=1.7.0
+VERSION=1.7.1
 DEPENDENCY="zeda=1.8.13;zm=1.8.16"
